--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   cloud_firestore: ^5.4.3
   flutter_local_notifications: ^17.2.3
   firebase_analytics: ^11.3.3
-  google_sign_in: ^6.0.2
+  google_sign_in: ^6.2.1
   http: ^1.2.2
   intl: ^0.19.0
   url_launcher: ^6.3.0
   timezone: ^0.9.4
   firebase_messaging: ^15.1.3
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.3.2
 
 
 
