--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_messaging: ^15.1.3
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.2
+  android_alarm_manager_plus: ^4.0.4
+  alarm: ^4.0.3
 
 
 
