--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,33 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        // Kotlin and AGP versions (adjust if necessary)
+        kotlin_version = '1.9.0'
+        agp_version = '8.3.1' // Or any required version
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        // Android Gradle Plugin
+        classpath "com.android.tools.build:gradle:$agp_version"
+
+        // Kotlin Gradle Plugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // Google services plugin for Firebase integration
+        classpath 'com.google.gms:google-services:4.3.15'
+
+        // Firebase Crashlytics plugin (if used)
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
+
+        // Other dependencies can go here
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -5,14 +35,14 @@ allprojects {
     }
 }
 
+// Set up project-wide build directories
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
+// Clean task to remove build directories
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
