--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   shared_preferences: ^2.3.2
   android_alarm_manager_plus: ^4.0.4
   alarm: ^4.0.3
+  rxdart: ^0.28.0
+  awesome_notifications: ^0.10.0
+  convert: ^3.1.2
+  googleapis_auth: ^1.6.0
+
 
 
 
@@ -68,6 +73,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/cie-exams-viit-eb74a001b9fc.json
+    - assets/logo.png
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
